--- a/src/main/webapp/resources/css/style-index.css
+++ b/src/main/webapp/resources/css/style-index.css
@@ -111,7 +111,7 @@ canvas#canvas {
     transition: transform ease-in-out 1s;
 }
 
-#check-button {
+.check-button {
     height: 60px;
     width: 300px;
     border-radius: 15px;
@@ -127,7 +127,7 @@ canvas#canvas {
     font-size: medium;
 }
 
-#check-button:active {
+.check-button:active {
     background-color: #5FC0CE;
 }
 
