--- a/src/main/webapp/views/index.xhtml
+++ b/src/main/webapp/views/index.xhtml
@@ -14,7 +14,7 @@
     <h:outputScript name="clock.js" library="js"/>
 </h:head>
 
-<body>
+<h:body>
     <header>
         <table class="rounded-corners">
             <tr>
@@ -34,7 +34,10 @@
         <canvas id="clock" title="Часы" width="300px" height="300px"></canvas>
         <br/>
         <br/>
-        <h:commandButton action="check" id="check-button" value="Перейти на страницу проверки"/>
+        <h:form>
+            <h:commandButton action="check?faces-redirect = true" id="check-button" value="Перейти на страницу проверки"
+                             ajax="false" styleClass="check-button"/>
+        </h:form>
     </article>
-</body>
+</h:body>
 </html>
