--- a/src/main/webapp/views/index.xhtml
+++ b/src/main/webapp/views/index.xhtml
@@ -35,7 +35,7 @@
         <br/>
         <br/>
         <h:form>
-            <h:commandButton action="check?faces-redirect = true" id="check-button" value="Перейти на страницу проверки"
+            <h:commandButton action="check" id="check-button" value="Перейти на страницу проверки"
                              ajax="false" styleClass="check-button"/>
         </h:form>
     </article>
