--- a/src/main/webapp/WEB-INF/views/check.xhtml
+++ b/src/main/webapp/WEB-INF/views/check.xhtml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
@@ -7,7 +8,8 @@
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:jstl="http://java.sun.com/jsp/jstl/core">
 <h:head>
     <title>Лаба 3</title>
     <h:outputStylesheet name="style-check.css" library="css"/>
@@ -34,7 +36,7 @@
             <tr>
                 <td>
                     <h:form id="form">
-                        <p:remoteCommand name="formSubmit" action="#{results.addResult}" />
+                        <p:remoteCommand name="formSubmit" action="#{results.addResult}"/>
                         <fieldset>
                             <legend style="text-align: left;"><span class="check-text">Данные для проверки</span>
                             </legend>
@@ -131,7 +133,28 @@
             </tr>
             </thead>
             <tbody>
-
+            <jstl:choose>
+                <jstl:when test="#{results.allResults.size() == 0}">
+                    <div align="center">Здесь будут храниться данные о предыдущих точках</div>
+                </jstl:when>
+                <jstl:otherwise>
+                    <ui:repeat var="item" value="#{results.allResults}">
+                        <tr>
+                            <td>#{item.x}</td>
+                            <td>#{item.y}</td>
+                            <td>#{item.r}</td>
+                            <jstl:choose>
+                                <jstl:when test="#{item.match}">
+                                    <span id="yes">да</span>
+                                </jstl:when>
+                                <jstl:otherwise>
+                                    <span id="no">нет</span>
+                                </jstl:otherwise>
+                            </jstl:choose>
+                        </tr>
+                    </ui:repeat>
+                </jstl:otherwise>
+            </jstl:choose>
             </tbody>
         </table>
     </article>
