--- a/src/main/webapp/resources/css/style-check.css
+++ b/src/main/webapp/resources/css/style-check.css
@@ -129,3 +129,7 @@ canvas#canvas {
 .check-button:active {
     background-color: #5FC0CE;
 }
+
+.article-table {
+    background-color: #21cfda;
+}
