--- a/src/main/webapp/views/check.xhtml
+++ b/src/main/webapp/views/check.xhtml
@@ -12,6 +12,7 @@
       xmlns:jstl="http://java.sun.com/jsp/jstl/core">
 <h:head>
     <title>Лаба 3</title>
+    <meta http-equiv="refresh" content="#{facesContext.externalContext.sessionMaxInactiveInterval};url=#{request.contextPath}/views/index.xhtml"/>
     <h:outputStylesheet name="style-check.css" library="css"/>
     <h:outputScript name="jquery-3.3.1.js" library="js"/>
     <h:outputScript name="sort_table.js" library="js"/>
@@ -37,7 +38,8 @@
                 <td>
                     <h:form id="form">
                         <p:remoteCommand name="formSubmit" update="result-table form" action="#{results.addResult}"
-                                         oncomplete="drawPoints();"/>
+                                         oncomplete="drawPoints();" onerror="document.location.reload(true);"
+                                         resetValues="true"/>
                         <fieldset>
                             <legend style="text-align: left;"><span class="check-text">Данные для проверки</span>
                             </legend>
