--- a/src/main/webapp/views/check.xhtml
+++ b/src/main/webapp/views/check.xhtml
@@ -75,24 +75,27 @@
                                         <h:inputText id="param-r" name="param-r" title="Целое или дробное число"
                                                      a:placeholder="Введите число от 1 до 4"
                                                      maxlength="16" required="true"
-                                                     requiredMessage="Неверный параметр R, пожалуйста, повторите ввод.">
-                                            <c:validator validatorId="com.shilko.ru.faces.validator.RValidator"/>
+                                                     requiredMessage="Неверный параметр R, пожалуйста, повторите ввод."
+                                        validator="RValidator">
+                                            <!--<c:validator validatorId="RValidator"/>-->
                                         </h:inputText>
                                     </td>
                                     <td>
                                         <p:spinner min="-4" max="4" value="0" stepFactor="0.5" id="param-x"
                                                    required="true"
                                                    requiredMessage="Неверная координата X, пожалуйста, повторите ввод."
-                                                   title="Одно из значений: -4, -3.5, -3, -2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4">
-                                            <c:validator validatorId="com.shilko.ru.faces.validator.XValidator"/>
+                                                   title="Одно из значений: -4, -3.5, -3, -2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4"
+                                                   validator="XValidator">
+                                            <!--<c:validator validatorId="XValidator"/>-->
                                         </p:spinner>
                                     </td>
                                     <td>
                                         <h:inputText id="param-y" name="param-y" title="Целое или дробное число"
                                                      a:placeholder="Введите число от -3 до 3"
                                                      maxlength="16" required="true"
-                                                     requiredMessage="Неверная координата Y, пожалуйста, повторите ввод.">
-                                            <c:validator validatorId="com.shilko.ru.faces.validator.YValidator"/>
+                                                     requiredMessage="Неверная координата Y, пожалуйста, повторите ввод."
+                                                     validator="YValidator">
+                                            <!--<c:validator validatorId="YValidator"/>-->
                                         </h:inputText>
                                     </td>
                                 </tr>
